--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,27 @@
-doctype html
-html(lang="fr")
-  head
-    title=AST
-    link(rel="stylesheet" href="public/css/main.css")
-  body
-    span Hello world
+extends layout
+
+block head
+  // Here will go our css/js links
+  script(type="text/javascript" src="/js/jquery.min.js" charset="utf-8")
+  script(type="text/javascript" src="/js/popper.min.js" charset="utf-8")
+  script(type="text/javascript" src="/js/bootstrap.min.js" charset="utf-8")
+  script(type="text/javascript" src="/js/index.js" charset="utf-8")
+  link(rel='stylesheet', href='/css/bootstrap.min.css')
+
+block content
+  div.container
+    div.col-md-6.col-md-offset-3
+      p #{text}
+      button#show-metrics(type="button" class="btn btn-success") Bring the metrics
+      #metrics
+
+  script
+    :coffee-script
+      $('#show-metrics').click (e) ->
+        e.preventDefault()
+        $.getJSON "/metrics.json", {}, (data) ->
+          content = "<ul>"
+          for d in data
+            content += "<li>timestamp: #{d.timestamp}, value: #{d.value}</li>"
+          content += "</ul>"
+          $('#metrics').append content
