--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block head
   // Here will go our css/js links
+  script(type="text/javascript" src="/js/d3/d3.min.js" charset="utf-8")
   script(type="text/javascript" src="/js/jquery.min.js" charset="utf-8")
   script(type="text/javascript" src="/js/popper.min.js" charset="utf-8")
   script(type="text/javascript" src="/js/bootstrap.min.js" charset="utf-8")
@@ -21,7 +22,8 @@ block content
         e.preventDefault()
         $.getJSON "/metrics.json", {}, (data) ->
           content = "<ul>"
-          for d in data
+          for d in data.data
             content += "<li>timestamp: #{d.timestamp}, value: #{d.value}</li>"
           content += "</ul>"
           $('#metrics').append content
+          graph(data)
